# anechka

./: .clang-format  .gitignore  CMakeLists.txt  README.md  client.cpp  server.cpp  valgrind.xml
config/: config.json
proto/: proto.txt
src/client/: client.cpp  client.h
src/engine/: doc_trace.cpp  doc_trace.h  engine.cpp  engine.h  shard.cpp  shard.h
src/hash/: iproxy.h  umap.h  uset.h  xxh64_hasher.h
src/mmap/: mmap.cpp  mmap.h
src/network/abstract/: cstub.cpp  cstub.h  message.cpp  message.h  sstub.cpp  sstub.h
src/network/blueprints/: message_blueprint_cpp.txt  message_blueprint_h.txt  server_blueprint_cpp.txt  server_blueprint_h.txt
src/network/common/: buf_utils.cpp  buf_utils.h  proto_utils.cpp  proto_utils.h
src/network/generator/: generator.py  main.py
src/network/generator/parser/: parser.py
src/server/: server.cpp  server.h
src/thread_pool/dispatch/: dispatch.cpp  dispatch.h
src/thread_pool/pool/: thread_pool.cpp  thread_pool.h
src/thread_pool/primitives/: callback.cpp  callback.h  task.h  waitable_future.cpp  waitable_future.h
src/utility/: common.h  json_spec.h  safe_queue.h  timer.cpp  timer.h
test/: anechka_test.cpp  container_test.cpp  doc_trace.cpp  mmap_test.cpp  performance_test.cpp  search_engine_test.cpp  shard_test.cpp  umap_test.cpp  valgrind.cpp
test/config/: config.json
test/data/: sample.txt
